# HAVI-Methyl

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  disk_files.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  repo.md
.github/workflows/: ci.yml  docs.yml
IMPLEMENTATION_ROADMAP/: index.html
STATUS/: index.html
api/: index.html
architecture/: index.html
calibration/: index.html
changelog/: index.html
concepts/: index.html
data/: MOESM4_ESM.xlsx
data/finaleme_manifest/: high_variance_cpgs.hg19.bed  loyfer_u25_blocks.hg19.bed  sample_pairs.csv
datasets/: index.html
docs/: IMPLEMENTATION_ROADMAP.md  STATUS.md  api.md  architecture.md  calibration.md  changelog.md  concepts.md  datasets.md  figures.md  index.md  installation.md  quickstart.md  report.md  reproducibility.md  results-synth.md  results.md  tissue.md
docs/report/: CHANGELOG-saim.md  CHANGELOG.md  CODING_AGENT_HANDOFF.md  README.md  main.tex  refs.bib  saim.cls
figures/: index.html
installation/: index.html
notebooks/: 01_simulator.ipynb  02_inference.ipynb  03_calibration_and_identifiability.ipynb
quickstart/: index.html
report/: index.html  latexmkrc  main.tex  math_commands.tex
report/CHANGELOG/: index.html
report/CHANGELOG-saim/: index.html
report/CODING_AGENT_HANDOFF/: index.html
report/code/: results.json
report/sections/: 0-abstract.tex  10.simulator.tex  11.synth.tex  12.benchmark.tex  (+8 more)
reproducibility/: index.html
results/: index.html
results-synth/: index.html
scripts/: _common.py  _style.py  bench_ablation_matrix.py  bench_compute_budget.py  bench_finaleme_realdata.py  bench_multiseed_recovery.py  bench_simulator_validation.py  bench_synth_recovery.py  bench_tissue_loo.py  bench_torch_svi.py  build_high_variance_panel.py  fig_calibration.py  fig_elbo_trajectory.py  fig_finaleme_coverage_strat.py  fig_finaleme_paired_metrics.py  fig_finaleme_paired_scatter.py  fig_loyfer_loo_per_tissue.py  fig_loyfer_loo_rmse.py  fig_multiseed_recovery.py  fig_recovery_scatter.py  run_all.sh  tab_ablations.py  tab_arch.py  tab_datasets.py  tab_extended_recovery.py  tab_hparams.py  tab_identifiability.py  tab_recovery.py  tab_rescale.py  tab_simparams.py  tab_tissue.py  tab_vfamily.py
search/: search_index.json
tests/: conftest.py  test_baseline.py  test_bounds.py  test_calibration.py  test_distributions.py  test_elbo.py  test_flow.py  test_full_components.py  test_identifiability.py  test_io_loaders.py  test_likelihoods.py  test_model.py  test_pipeline.py  test_simulator.py  test_svi.py  test_tissue.py  test_torch_modules.py  test_utils.py  test_varfamily.py
tissue/: index.html
(+93 files in other folders)
